manifests/statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-statefulset  
  namespace: dev
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      securityContext:
        fsGroup: 999
      containers:
      - name: db-container  
        image: anildoc143/blood_bank:db_image
        ports:
        - containerPort: 3306
          name: mysql  
        readinessProbe:
          exec:
            command:
            - mysqladmin
            - ping
            - -uroot
            - -p$(MYSQL_ROOT_PASSWORD)
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3  
        livenessProbe:
          exec:
            command:
            - mysqladmin
            - ping
            - -uroot
            - -p$(MYSQL_ROOT_PASSWORD)
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3  
        volumeMounts:
        - name: db-data  
          mountPath: /var/lib/mysql
        resources:
          requests:
            cpu: "200m" 
            memory: "356Mi"  
          limits:
            cpu: "400m" 
            memory: "712Mi"  
      imagePullSecrets:
      - name: mydockerhub-secret
  volumeClaimTemplates:
  - metadata:
      name: db-data
    spec:
      storageClassName: "gp2"
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 3Gi
