manifests/app_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: appservice
  namespace: dev
spec:
  selector: 
    app: application
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: "TCP"
