manifests/db_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: dev
spec:
  clusterIP: None
  selector:
    app: db
  ports:
  - port: 3306
    targetPort: 3306
