manifests/ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingressapp
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: appservice
                port:
                  number: 80
